force-app/main/default/objects/FMZ_CTA_Settings__c/FMZ_CTA_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>FMZ CTA Settings</label>
</CustomObject>