force-app/main/default/objects/FMZ_CTA_Settings__c/fields/CC_Call_to_Action__c.field-meta.xml
<CustomField>
    <fullName>CC_Call_to_Action__c</fullName>
    <label>CC Call to Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>