force-app/main/default/objects/FMZ_CTA_Settings__c/fields/CC_Image__c.field-meta.xml
<CustomField>
    <fullName>CC_Image__c</fullName>
    <label>CC Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>