force-app/main/default/objects/FMZ_CTA_Settings__c/fields/CC_Label__c.field-meta.xml
<CustomField>
    <fullName>CC_Label__c</fullName>
    <label>CC Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>