force-app/main/default/objects/FMZ_CTA_Settings__c/fields/Complete_Apps_Call_to_Action__c.field-meta.xml
<CustomField>
    <fullName>Complete_Apps_Call_to_Action__c</fullName>
    <label>Complete Apps Call to Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>