force-app/main/default/objects/FMZ_CTA_Settings__c/fields/Complete_Apps_Image__c.field-meta.xml
<CustomField>
    <fullName>Complete_Apps_Image__c</fullName>
    <label>Complete Apps Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>