force-app/main/default/objects/FMZ_CTA_Settings__c/fields/Complete_Apps_Name_Column_Label__c.field-meta.xml
<CustomField>
    <fullName>Complete_Apps_Name_Column_Label__c</fullName>
    <label>Complete Apps Name Column Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>