force-app/main/default/objects/FMZ_CTA_Settings__c/fields/Convert_CC_Complete_Message__c.field-meta.xml
<CustomField>
    <fullName>Convert_CC_Complete_Message__c</fullName>
    <label>Convert CC Complete Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>