force-app/main/default/objects/FMZ_CTA_Settings__c/fields/Convert_CC_Label__c.field-meta.xml
<CustomField>
    <fullName>Convert_CC_Label__c</fullName>
    <label>Convert CC Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>