force-app/main/default/objects/FMZ_CTA_Settings__c/fields/Convert_CC_Name_Column_label__c.field-meta.xml
<CustomField>
    <fullName>Convert_CC_Name_Column_label__c</fullName>
    <label>Convert CC Name Column label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>