force-app/main/default/objects/FMZ_CTA_Settings__c/fields/Fund_Apps_Call_to_Action__c.field-meta.xml
<CustomField>
    <fullName>Fund_Apps_Call_to_Action__c</fullName>
    <label>Fund Apps Call to Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>