force-app/main/default/objects/FMZ_CTA_Settings__c/fields/Fund_Apps_Complete_Message__c.field-meta.xml
<CustomField>
    <fullName>Fund_Apps_Complete_Message__c</fullName>
    <label>Fund Apps Complete Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>