force-app/main/default/objects/FMZ_CTA_Settings__c/fields/Fund_Apps_Name_Column_Label__c.field-meta.xml
<CustomField>
    <fullName>Fund_Apps_Name_Column_Label__c</fullName>
    <label>Fund Apps Name Column Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>